<resources>
    <string name="app_name">CBDC Blood Family</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello Blood fragment</string>
    <string name="md_shihab_uddin">Md. Shihab Uddin</string>
    <string name="duet_gazipur_bangladesh">DUET, Gazipur, Bangladesh</string>
    <string name="about_me">About Me</string>
    <string name="shihab">shihab</string>
    <string name="x">X</string>
    <string name="enter_patient_name">Enter patient name</string>
    <string name="name">Name</string>
    <string name="quantity_how_many_bags">Quantity(How many bags)</string>
    <string name="example_2">Example: 2</string>
    <string name="patient_type">Patient Type</string>
    <string name="example_cancer">Example: Cancer</string>
    <string name="select_blood_group">Select blood group</string>
    <string name="city">City</string>
    <string name="select_date">Select Date</string>
    <string name="submit">Submit</string>
    <string name="enter_blood_donor_name">Enter Blood Donor Name</string>
    <string name="enter_blood_doror_s_address">Enter blood doror\'s address</string>
    <string name="ex_dharmokam_sherpur_bogura">Ex: Dharmokam, Sherpur, Bogura.</string>
    <string name="organization">Organization</string>
    <string name="tap_to_select_logo">Tap to Select Logo</string>
    <string name="enter_organization_name">Enter Organization Name</string>
    <string name="organization_name">Organization Name</string>
    <string name="enter_admin_name">Enter Admin Name</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_contact_number">Admin Contact Number</string>
    <string name="enter_coordinator_name">Enter Coordinator Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="ex_01xxxxxxxxx">Ex : 01xxxxxxxxx</string>
    <string name="enter_app_admin_password">Enter Admin Password</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="select_district">Select District</string>
    <string name="ready_to_donate">Ready to donate :</string>
    <string name="yes">Yes</string>
    <string name="update">Update</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_by_blood_group">Search By Blood Group</string>
    <string name="search_by_coordinator_name">Search By Coordinator Name</string>
    <string name="search_by_organization_name">Search By Organization Name</string>
    <string name="blood_request">Blood Request</string>
    <string name="coordinator">Coordinator</string>
    <string name="select_city">Select City</string>
    <string name="search">Search</string>
    <string name="blood">Blood</string>
    <string name="o">O</string>
    <string name="quantity_bag_2">Quantity(Bag) : 2</string>
    <string name="dharmokam_sherpur_bogra">Dharmokam, Sherpur, Bogra</string>
    <string name="date_24_07_2021">Date : 24/07/2021</string>
    <string name="patient_type_cancer">Patient Type : Cancer</string>
    <string name="contact_with_mr_x">Contact with : Mr. X</string>
    <string name="phone_number_017">Phone Number : 017#########</string>
    <string name="message_button">message button</string>
    <string name="name_md_shihab_uddin">Name : Md. Shihab Uddin</string>
    <string name="phone_01871429133">Phone : 01871429133</string>
    <string name="call_button">Call button</string>
    <string name="organization_name_dummy">Organization Name : Dummy</string>
    <string name="admin_name_dummy">Admin Name : Dummy</string>
    <string name="your_name">Your Name</string>
    <string name="dummy_gmail_com">dummy@gmail.com</string>
    <string name="total_blood_donors_500">Total Blood Donors : 500</string>
    <string name="phone_number_01723000000">Phone Number : 01723000000</string>
    <string name="last_donation_date_25_10_2020">Last Donation Date : 25/10/2020</string>
    <string name="add_helpline">Add Helpline</string>
    <string name="blood_bank_name">Blood Bank Name</string>
    <string name="contact_no">Contact No</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="logo">logo</string>
    <string name="founder">Founder</string>
    <string name="md_abdul_halim">Md Abdul Halim</string>
    <string name="admin">Admin</string>
    <string name="shamsul_alam_srabon">Shamsul Alam Srabon</string>
    <string name="co_admin">Co-Admin</string>
    <string name="shohel_rana">Shohel Rana</string>
    <string name="helal_uddin">Helal Uddin</string>
    <string name="syed_mohammad_imran">Syed Mohammad Imran</string>
    <string name="call">Call</string>
    <string name="msg">Msg</string>
    <string name="select_your_district">Select your district</string>
    <string name="ambulance_name">Ambulance Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="ready_to_service">Ready to Service</string>
    <string name="upozila_university_name">Upozila/University Name</string>
    <string name="upazila_university">Upazila/University</string>
    <string name="edit_information">Edit Information</string>
    <string name="add_blood_request">Add Blood Request</string>
    <string name="add_new_donor">Add New Donor</string>
    <string name="add_coordinator">Add Coordinator</string>
    <string name="add_organization">Add Organization</string>
    <string name="add_blood_bank">Add Blood Bank</string>
    <string name="donate_us">Donate Us</string>
    <string name="show_helpline">Show Helpline</string>
    <string name="show_blood_bank">Show Blood Bank</string>
    <string name="about_us">About Us</string>
    <string name="about_developer">About Developer</string>
    <string name="communicate">Communicate</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_last_donation_date">Select Last Donation Date</string>
    <string name="search_by_blood_bank_name">Search By Blood Bank Name</string>
    <string name="search_by_ambulance_name">Search By Name</string>
    <string name="blood_donor">Blood Donor</string>
    <string name="idgor_blood_bank">CBDC Blood Bank</string>
    <string name="mirpur_dhaka_bangladesh">Mirpur, Dhaka, Bangladesh</string>
    <string name="_0635468393932">0635468393932</string>
    <string name="ready_to_donate_yes">Ready to donate : Yes</string>
    <string name="national_emergency_number">National Emergency Number</string>
    <string name="_999">999</string>
    <string name="user_photo">User Photo</string>
    <string name="bn">BN</string>
    <string name="en">EN</string>
    <string name="note">সর্বশেষ রক্তদানের তারিখ আপডেট রাখতে, প্রতিবার রক্তদান সম্পন্ন করার পর, অনুগ্রহপূর্বক এই পেজের তথ্য গুলো পুনরায় পূরণ করে সাবমিট দিন</string>
    <string name="language">ভাষা নির্বাচন: </string>
</resources>