<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutCBDC">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/profile_page_gradien_background_style"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/redsoft"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:text="@string/founder"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:text="@string/md_abdul_halim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:text="@string/shamsul_alam_srabon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:text="@string/co_admin"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:text="@string/shohel_rana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:text="@string/helal_uddin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:text="@string/syed_mohammad_imran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>