<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfilePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/mid_dark" />

        <EditText
            android:id="@+id/editTextText_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_rectangle_style"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="40" />

        <TextView
            android:id="@+id/textView_select_blood_group_edited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_rectangle_style"
            android:gravity="center_vertical"
            android:hint="@string/select_blood_group"
            android:padding="14dp"
            android:text="@string/select_blood_group"
            android:textColor="@color/mid_dark"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />

        <TextView
            android:id="@+id/textView_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/country"
            android:textColor="@color/mid_dark" />

        <EditText
            android:id="@+id/editTextText_user_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_rectangle_style"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="text"
            android:maxLength="40" />

        <TextView
            android:id="@+id/textView_select_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_rectangle_style"
            android:gravity="center_vertical"
            android:hint="@string/select_district"
            android:padding="14dp"
            android:text="@string/select_your_district"
            android:textColor="@color/mid_dark"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />


        <EditText
            android:id="@+id/editTextText_user_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_rectangle_style"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="text"
            android:maxLength="40" />

        <EditText
            android:id="@+id/editTextText_user_organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_rectangle_style"
            android:ems="10"
            android:hint="@string/organization"
            android:inputType="text"
            android:maxLength="40" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ready_to_donate"
                android:textColor="@color/mid_dark" />

            <CheckBox
                android:id="@+id/checkBox_donate_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/mid_dark"
                android:text="@string/yes" />

        </LinearLayout>

        <Button
            android:id="@+id/button_update_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_rectangle_style"
            android:text="@string/update" />


    </LinearLayout>

</ScrollView>